# restfulapp

./: .dockerignore  .env.example  .my.cnf  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  init.sql  pyproject.toml
app/: config.py  main.py  settings_gunicorn.py  wsgi.py
app_employee/: app.py  pyproject.toml
docs/: deployment.md  environment-variable.md
